<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context="com.nkhatho.leole.doggyparlour.MainActivity">

    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/all_margins"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:text="@string/main_activity_welcome"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/header_text_size"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="7"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ivWelcomeDog"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            app:srcCompat="@mipmap/huskie" />
    </LinearLayout>

    <Button
        android:id="@+id/btnSeeAllDogs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_margin="@dimen/btn_all_margins"
        android:background="@color/colorAccent"
        android:text="@string/btn_see_all_dogs"
        android:textColor="@color/colorPrimaryDark" />

    <Button
        android:id="@+id/btnBookADog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginBottom="@dimen/btn_all_margins"
        android:layout_marginLeft="@dimen/btn_all_margins"
        android:layout_marginRight="@dimen/btn_all_margins"
        android:background="@color/colorAccent"
        android:text="@string/btn_book_a_dog"
        android:textColor="@color/colorPrimaryDark" />
</LinearLayout>
